[gd_scene load_steps=7 format=2]

[ext_resource path="res://PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://Sprite.png" type="Texture" id=2]
[ext_resource path="res://SelectSound.tscn" type="PackedScene" id=3]
[ext_resource path="res://FocusStyle.tres" type="StyleBox" id=4]
[ext_resource path="res://BebasNeue.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="PauseScreen" type="Container"]

pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -270.0
margin_right = 480.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Rect" ]

[node name="Panel" type="Panel" parent="." index="0"]

self_modulate = Color( 1, 1, 1, 0.25 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 960.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Container" type="Container" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="Left" type="TextureRect" parent="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 100.0
rect_scale = Vector2( 0.4, 1 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Right" type="TextureRect" parent="Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_right = 160.0
margin_bottom = 100.0
rect_scale = Vector2( 0.4, 1 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="SelectSound" parent="." index="2" instance=ExtResource( 3 )]

[node name="ResumeButton" type="Button" parent="." index="3"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -150.0
margin_right = 94.0
margin_bottom = -84.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Resume"
flat = true
align = 1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[node name="MenuButton" type="Button" parent="." index="4"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -80.0
margin_right = 94.0
margin_bottom = -14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Main Menu"
flat = true
align = 1
_sections_unfolded = [ "custom_fonts", "custom_styles" ]

[connection signal="pressed" from="ResumeButton" to="SelectSound" method="play"]

[connection signal="pressed" from="ResumeButton" to="." method="hide"]

[connection signal="pressed" from="ResumeButton" to="." method="_resume_game"]

[connection signal="pressed" from="MenuButton" to="SelectSound" method="play"]

[connection signal="pressed" from="MenuButton" to="." method="hide"]

[connection signal="pressed" from="MenuButton" to="." method="_open_main_menu"]


